exports[`Container > CreateOrganization can create an organization 1`] = `
Object {
  "payload": Object {
    "contact": "My new value",
    "email": "My new value",
    "groups": Array [],
    "logo_url": "My new value",
    "main_url": "My new value",
    "name": "My new value",
    "sites": Array [],
  },
  "type": "add organization",
}
`;

exports[`Container > CreateOrganization can create an organization 2`] = `
Object {
  "payload": Object {
    "args": Array [
      "/",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > CreateOrganization renders correctly 1`] = `
<Connect(CreateOrganization)>
  <CreateOrganization
    create={[Function]}>
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}>
      <div
        className="container">
        <Row
          bsClass="row"
          componentClass="div">
          <div
            className="row">
            <Col
              bsClass="col"
              componentClass="div"
              xs={12}>
              <div
                className="col-xs-12">
                <h3>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="pull-right"
                    disabled={false}>
                    <button
                      className="pull-right btn btn-default"
                      disabled={false}
                      type="button">
                      <Link
                        onlyActiveOnIndex={false}
                        style={Object {}}
                        to="/">
                        <a
                          onClick={[Function]}
                          style={Object {}}>
                          <pure(Icon)
                            type="arrow-left">
                            <i
                              className="fa fa-arrow-left fa-fw " />
                          </pure(Icon)>
                        </a>
                      </Link>
                    </button>
                  </Button>
                </h3>
                <form>
                  <FieldGroup
                    label="Name"
                    name="name"
                    onChange={[Function]}
                    placeholder="Enter name"
                    type="text">
                    <FormGroup
                      bsClass="form-group"
                      controlId="group-item-name">
                      <div
                        className="form-group">
                        <ControlLabel
                          bsClass="control-label"
                          srOnly={false}>
                          <label
                            className="control-label"
                            htmlFor="group-item-name">
                            Name
                          </label>
                        </ControlLabel>
                        <FormControl
                          bsClass="form-control"
                          componentClass="input"
                          onChange={[Function]}
                          placeholder="Enter name"
                          type="text">
                          <input
                            className="form-control"
                            id="group-item-name"
                            onChange={[Function]}
                            placeholder="Enter name"
                            type="text" />
                        </FormControl>
                      </div>
                    </FormGroup>
                  </FieldGroup>
                  <FieldGroup
                    label="Main URL"
                    name="main_url"
                    onChange={[Function]}
                    placeholder="Enter url"
                    type="text">
                    <FormGroup
                      bsClass="form-group"
                      controlId="group-item-main_url">
                      <div
                        className="form-group">
                        <ControlLabel
                          bsClass="control-label"
                          srOnly={false}>
                          <label
                            className="control-label"
                            htmlFor="group-item-main_url">
                            Main URL
                          </label>
                        </ControlLabel>
                        <FormControl
                          bsClass="form-control"
                          componentClass="input"
                          onChange={[Function]}
                          placeholder="Enter url"
                          type="text">
                          <input
                            className="form-control"
                            id="group-item-main_url"
                            onChange={[Function]}
                            placeholder="Enter url"
                            type="text" />
                        </FormControl>
                      </div>
                    </FormGroup>
                  </FieldGroup>
                  <FieldGroup
                    label="Logo URL"
                    name="logo_url"
                    onChange={[Function]}
                    placeholder="Enter logo url"
                    type="text">
                    <FormGroup
                      bsClass="form-group"
                      controlId="group-item-logo_url">
                      <div
                        className="form-group">
                        <ControlLabel
                          bsClass="control-label"
                          srOnly={false}>
                          <label
                            className="control-label"
                            htmlFor="group-item-logo_url">
                            Logo URL
                          </label>
                        </ControlLabel>
                        <FormControl
                          bsClass="form-control"
                          componentClass="input"
                          onChange={[Function]}
                          placeholder="Enter logo url"
                          type="text">
                          <input
                            className="form-control"
                            id="group-item-logo_url"
                            onChange={[Function]}
                            placeholder="Enter logo url"
                            type="text" />
                        </FormControl>
                      </div>
                    </FormGroup>
                  </FieldGroup>
                  <FieldGroup
                    label="Contact"
                    name="contact"
                    onChange={[Function]}
                    placeholder="Enter contact"
                    type="text">
                    <FormGroup
                      bsClass="form-group"
                      controlId="group-item-contact">
                      <div
                        className="form-group">
                        <ControlLabel
                          bsClass="control-label"
                          srOnly={false}>
                          <label
                            className="control-label"
                            htmlFor="group-item-contact">
                            Contact
                          </label>
                        </ControlLabel>
                        <FormControl
                          bsClass="form-control"
                          componentClass="input"
                          onChange={[Function]}
                          placeholder="Enter contact"
                          type="text">
                          <input
                            className="form-control"
                            id="group-item-contact"
                            onChange={[Function]}
                            placeholder="Enter contact"
                            type="text" />
                        </FormControl>
                      </div>
                    </FormGroup>
                  </FieldGroup>
                  <FieldGroup
                    label="Email"
                    name="email"
                    onChange={[Function]}
                    placeholder="Enter email"
                    type="text">
                    <FormGroup
                      bsClass="form-group"
                      controlId="group-item-email">
                      <div
                        className="form-group">
                        <ControlLabel
                          bsClass="control-label"
                          srOnly={false}>
                          <label
                            className="control-label"
                            htmlFor="group-item-email">
                            Email
                          </label>
                        </ControlLabel>
                        <FormControl
                          bsClass="form-control"
                          componentClass="input"
                          onChange={[Function]}
                          placeholder="Enter email"
                          type="text">
                          <input
                            className="form-control"
                            id="group-item-email"
                            onChange={[Function]}
                            placeholder="Enter email"
                            type="text" />
                        </FormControl>
                      </div>
                    </FormGroup>
                  </FieldGroup>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    disabled={false}
                    onClick={[Function]}>
                    <button
                      className="btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      type="button">
                      Create
                    </button>
                  </Button>
                </form>
              </div>
            </Col>
          </div>
        </Row>
      </div>
    </Grid>
  </CreateOrganization>
</Connect(CreateOrganization)>
`;

exports[`actions > organization create organization should work 1`] = `
Object {
  "payload": Object {
    "groups": Array [],
    "name": "mockOrg",
    "sites": Array [],
  },
  "type": "add organization",
}
`;

exports[`actions > organization create organization should work 2`] = `
Object {
  "payload": Object {
    "args": Array [
      "/",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > organization create site should work 1`] = `
Object {
  "payload": Object {
    "name": "mockSite",
    "organizationId": "1",
  },
  "type": "add site",
}
`;

exports[`actions > organization create site should work 2`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organizations/1",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
